--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 #readingText {
-  background-color: rgba(255, 255, 255, 0.95) !important; /* Make it less transparent */
+  background-color: rgba(255, 255, 255, 0.95); /* Make it less transparent */
 }
 
 .highlight {
