edited index and style

--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
 
 .container {
   max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    overflow: hidden; /* Add this to prevent overflow */
+  margin: 20px auto; /* Add margin to separate containers */
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  overflow: hidden; /* Add this to prevent overflow */
 }
 
 .selector {
@@ -44,7 +44,6 @@ body {
   display: flex;           /* Make this a flex container */
   justify-content: center; /* Center horizontally */
   align-items: center;     /* Center vertically */  
-  
 }
 
 #imageFrame {
@@ -75,7 +74,6 @@ body {
 .quiz-question {
   margin-bottom: 20px;
 }
-
 
 .highlight {
   background-color: yellow; /* Changed to yellow for better visibility */
