--- a/style.css
+++ b/style.css
@@ -61,12 +61,16 @@ body {
   background-color: rgba(255, 255, 255, 0.95); /* Make it less transparent */
 }
 
-#vocabularySection,
-#quizSection {
-  margin-top: 20px;
+* Vocabulary Section */
+#vocabularySection h3,
+#quizSection h3 {
+  color: darkred; /* Set the text color to dark red */
+  font-size: 24px; /* Adjust the font size if needed */
+  font-weight: bold; /* Make the headers bold */
+  margin-bottom: 10px; /* Add some space below the headers */
 }
 
-#vocabularyContent,
+/* Quiz Section */
 #quizContent {
   margin-top: 10px;
 }
@@ -74,16 +78,6 @@ body {
 .quiz-question {
   margin-bottom: 20px;
 }
-
-.highlight {
-  background-color: yellow; /* Changed to yellow for better visibility */
-  color: black;
-  display: inline;
-  padding: 2px 4px;
-  border-radius: 3px;
-}
-
-
 
 /* Style for the quiz buttons */
 #scoreButton,
@@ -109,4 +103,5 @@ body {
 #scoreFeedback {
   margin-top: 10px;
   font-weight: bold;
+}
 }
