--- a/style.css
+++ b/style.css
@@ -142,9 +142,11 @@ html, body {
 }
 
 /* This is for the camera box at the bottom of the form */
+
+
 #cameraBox {
-  width: 150px; /* Fixed width for the camera box */
-  height: 150px; /* Fixed height for the camera box */
+  width: 150px; /* Adjust the width as needed */
+  height: 150px; /* Adjust the height as needed */
   border: 2px solid darkblue;
   border-radius: 10px;
   background-color: #f0f0f0;
@@ -152,7 +154,7 @@ html, body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  box-sizing: border-box; /* Include padding and border in the element's total width */
+  margin: 0 auto; /* Center the camera box horizontally */
 }
 
 #cameraBox video {
